--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div class="heading">
                     <h1><strong>Tomi Jerenko</strong> - Cyber Security Engineer</h1>
                     <p><strong>Cyber Security Engineer</strong> specializing in engineering, auditing and hardening of enterprise cyber systems to improve application, network, infrastructure and information security.</p>
-                    <p>Possessing developer background, I hold an engineering master's degree in information and communication technologies, and am a candidate for master's degree of science in cyber security.</p>
+                    <p>Holding an engineering master's degree in information and communication technologies, I'm also a candidate for master's degree of science in cyber security.</p>
                     <p>My operating system of choice is anything <span class="strong">Linux</span> based. I speak Go, Rust, Shell, Python, JavaScript, Ruby, C#, C and C++.</p>
                 </div>
                 <h2>Current Work</h2>
