--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <p>Currently employed at <a href="https://www.solarisbank.com/en/">[Solarisbank]</a>, being responsible for security of the <a href="https://www.solarisdigitalassets.com/en/">[Solaris Digital Assets]</a> platform.</p>
                     <p>My daily routine consists of assuring front-line security and preventing insider threats by</p>
                         <ul>
-                            <li>Auditing security designs of infrastructure and API services</li>
+                            <li>Performing security audits of infrastructure and API services</li>
                             <li>Hardening infrastructure and its components</li>
                             <li>Crafting automated auditing and monitoring tools</li>
                             <li>Crafting security related infrastructure and applications</li>
