--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta lang="en" name="keywords" content="tomi, jerenko, cyber, security, engineer, trading, custody, brokerage, digital assets, crypto, defi, specialist, professional">
-        <meta name="description" content="Tomi Jerenko - Cyber Security Specialist for engineering, auditing and hardening of cyber systems for digital asset and DeFi platforms.">
+        <meta name="description" content="Tomi Jerenko - Cyber Security Specialist in engineering, auditing and hardening of cyber systems for digital asset and DeFi platforms.">
         <link rel="stylesheet" href="style.css">
         <link rel="icon" type="image/png" href="images/favicon-16x16.png" sizes="16x16" />
         <link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32" />
@@ -33,7 +33,7 @@
             <div class="info-container">
                 <h1><strong>Tomi Jerenko</strong> - Cyber Security Specialist</h1>
                 <section>
-                    <p><strong>Cyber Security Specialist</strong> for engineering, auditing and hardening of cyber systems for digital asset and DeFi platforms to improve application, infrastructure and information security.</p>
+                    <p><strong>Cyber Security Specialist</strong> in engineering, auditing and hardening of cyber systems for digital asset and DeFi platforms to improve application, infrastructure and information security.</p>
                 </section>
                 <h2>Current Work</h2>
                 <section>
