--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="image-container">
                 <img src="images/tomijerenko.jpg" alt="Tomi Jerenko Cyber Security Specialist" title="Tomi Jerenko Cyber Security Specialist">
                 <div class="contact-buttons">
-                    <a href="mailto:jerenkotomi@gmail.com" >
+                    <a href="mailto:contact@tomijerenko.com" >
                         <svg viewBox="1.5 3 15 15" xmlns="http://www.w3.org/2000/svg" stroke-width="0.5px"><title>Email</title><g fill-rule="evenodd" stroke-linecap="round" stroke-linejoin="round" transform="matrix(0 -1 0.86 0 2.5 16.5)"><path d="m2 .5h8c1.1045695 0 2 .8954305 2 2v10c0 1.1045695-.8954305 2-2 2h-8c-1.1045695 0-2-.8954305-2-2v-10c0-1.1045695.8954305-2 2-2z"/><path d="m2 6 5 3 5-3" transform="matrix(0 1 -1 0 14.5 .5)"/></g></svg>
                     </a>
                     <a href="https://www.linkedin.com/in/tomijerenko/" target="_blank">
@@ -55,7 +55,7 @@
                 <section>
                 <h2>Contact</h2>
                 <section>
-                    <p>For business related inquiries and other important matters, please send me an <a href="mailto:jerenkotomi@gmail.com">[Email]</a> or contact me on <a href="https://www.linkedin.com/in/tomijerenko/" target="_blank">[LinkedIn]</a>.</p>
+                    <p>For business related inquiries and other important matters, please send me an <a href="mailto:contact@tomijerenko.com">[Email]</a> or contact me on <a href="https://www.linkedin.com/in/tomijerenko/" target="_blank">[LinkedIn]</a>.</p>
                     <p>Check out my <a href="https://github.com/tomijerenko/" target="_blank">[GitHub]</a> profile. You're welcome to pull, fork, modify, or criticize my code.</p>
                 </section>
             </div>
