--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </section>
                 <h2>Current Work</h2>
                 <section>
-                    <p>Currently employed at <a href="https://www.solarisdigitalassets.com/en/">[Solaris Digital Assets]</a>, my daily routine consists of implementing and enforcing DevSecOps practices and ensuring application security:</p>
+                    <p>Currently employed at <a href="https://www.qredo.com/">[Qredo]</a>, my daily routine consists of implementing and enforcing DevSecOps practices and ensuring application security:</p>
                         <ul>
                             <li>Performing security audits of infrastructure and API services</li>
                             <li>Deploying and integrating security related infrastructure and applications</li>
@@ -55,7 +55,7 @@
                 <section>
                 <h2>Contact</h2>
                 <section>
-                    <p>For business related inquiries and other important matters, please send me an <a href="mailto:contact@tomijerenko.com">[Email]</a> or contact me on <a href="https://www.linkedin.com/in/tomijerenko/" target="_blank">[LinkedIn]</a>.</p>
+                    <p>For business related inquiries and other important matters, please send me an <a href="mailto:jerenkotomi@gmail.com">[Email]</a> or contact me on <a href="https://www.linkedin.com/in/tomijerenko/" target="_blank">[LinkedIn]</a>.</p>
                     <p>Check out my <a href="https://github.com/tomijerenko/" target="_blank">[GitHub]</a> profile. You're welcome to pull, fork, modify, or criticize my code.</p>
                 </section>
             </div>
