--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
     <head>
         <title>Tomi Jerenko - Cyber Security Specialist</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta lang="en" name="keywords" content="tomi, jerenko, cyber, security, engineer, trading, custody, brokerage, digital assets, crypto, defi, specialist, professional">
+        <meta name="language" content="en">
+        <meta name="author" content="Tomi Jerenko">
+	<meta name="keywords" content="tomi jerenko, cyber security, cloud security, devsecops, cryptography, blockchain, cryptocurrencies, digital assets, decentralized finance, defi">
         <meta name="description" content="Tomi Jerenko - cyber security specialist in engineering, auditing and hardening of digital asset and DeFi platforms.">
         <link rel="stylesheet" href="style.css">
         <link rel="icon" type="image/png" href="images/favicon-16x16.png" sizes="16x16" />
@@ -14,12 +16,12 @@
         <link rel="manifest" href="site.webmanifest">
         <meta name="theme-color" content="#ffffff">
     </head>
-    <body>
+    <body itemscope itemtype="http://schema.org/Person">
         <div class="container">
             <div class="image-container">
                 <img src="images/tomijerenko.jpg" alt="Tomi Jerenko Cyber Security Specialist" title="Tomi Jerenko Cyber Security Specialist">
                 <div class="contact-buttons">
-                    <a href="mailto:contact@tomijerenko.com" >
+                    <a href="mailto:jerenkotomi@gmail.com">
                         <svg viewBox="1.5 3 15 15" xmlns="http://www.w3.org/2000/svg" stroke-width="0.5px"><title>Email</title><g fill-rule="evenodd" stroke-linecap="round" stroke-linejoin="round" transform="matrix(0 -1 0.86 0 2.5 16.5)"><path d="m2 .5h8c1.1045695 0 2 .8954305 2 2v10c0 1.1045695-.8954305 2-2 2h-8c-1.1045695 0-2-.8954305-2-2v-10c0-1.1045695.8954305-2 2-2z"/><path d="m2 6 5 3 5-3" transform="matrix(0 1 -1 0 14.5 .5)"/></g></svg>
                     </a>
                     <a href="https://www.linkedin.com/in/tomijerenko/" target="_blank">
@@ -31,13 +33,13 @@
                 </div>
             </div>
             <div class="info-container">
-                <h1><strong>Tomi Jerenko</strong> - Cyber Security Specialist</h1>
+                <h1><strong itemprop="name">Tomi Jerenko</strong> - Cyber Security Specialist</h1>
                 <section>
-                    <p><strong>Cyber Security Specialist</strong> in engineering, auditing and hardening of digital asset and DeFi platforms.</p>
+                    <p><strong itemprop="jobTitle">Cyber Security Specialist</strong> in engineering, auditing and hardening of digital asset and DeFi platforms.</p>
                 </section>
                 <h2>Current Work</h2>
                 <section>
-                    <p>Currently employed at <a href="https://www.qredo.com/">[Qredo]</a>, my daily routine consists of implementing and enforcing DevSecOps practices and ensuring application security:</p>
+                    <p>Currently employed at <a href="https://www.qredo.com/" itemprop="worksFor">[Qredo]</a>, my daily routine consists of implementing and enforcing DevSecOps practices and ensuring application security:</p>
                         <ul>
                             <li>Performing security audits of infrastructure and API services</li>
                             <li>Deploying and integrating security related infrastructure and applications</li>
