--- a/index.html
+++ b/index.html
@@ -35,30 +35,23 @@
             <div class="info-container">
                 <h1><strong itemprop="name">Tomi Jerenko</strong> - Cyber Security Specialist</h1>
                 <section>
-                    <p><strong itemprop="jobTitle">Cyber Security Specialist</strong> in engineering, auditing and hardening of digital asset and DeFi platforms.</p>
+                    <p>As a <strong itemprop="jobTitle">Cyber Security Specialist</strong>, I specialize in engineering, auditing and hardening of Digital Asset and Decentralized Finance platforms and solutions.</p>
                 </section>
                 <h2>Current Work</h2>
                 <section>
-                    <p>Currently employed at <a href="https://www.qredo.com/" itemprop="worksFor">[Qredo]</a>, my daily routine consists of implementing and enforcing DevSecOps practices and ensuring application security:</p>
-                        <ul>
-                            <li>Performing security audits of infrastructure and API services</li>
-                            <li>Deploying and integrating security related infrastructure and applications</li>
-                            <li>Crafting security related infrastructure and applications</li>
-                        </ul>
+                    <p>I am currently employed at <a href="https://www.qredo.com/" itemprop="worksFor">[Qredo]</a> and responsible for implementing and enforcing DevSecOps practices for a decentralized institutional cross-chain digital asset management solution.</p>
                 </section>
-                <h2>Adding Business Value</h2>
+                <h2>Problem Solver with Broad Expertise</h2>
                 <section>
-                    <p>Being familiar with a very broad array of topics, tools and technologies, and possessing extensive academic knowledge, I'm able to solve complex problems by developing highly specialized yet simple solutions.</p>
-                    <p>Having a flexible personality, I easily integrate with teams and get along with anyone, or work independently on solo projects. I'm a motivated, ambitious, extroverted and goal oriented person.</p>
+                    <p>With extensive academic knowledge and a broad familiarity across various topics, tools, and technologies, I am highly adept at solving complex problems with specialized yet simple solutions.<p>
                 </section>
-                <h2>Interests</h2>
+                <h2>Personal Interests and Hobbies</h2>
                 <section>
-                    Besides IT, I'm interested in psychology, philosophy, languages, motorcycles and various adrenaline sports.
+		    <p>In addition to my passion for technology, I am also deeply interested in psychology, philosophy, languages, singing, and adrenaline sports such as motorcycle riding and climbing.</p>
                 <section>
                 <h2>Contact</h2>
                 <section>
-                    <p>For business related inquiries and other important matters, please send me an <a href="mailto:jerenkotomi@gmail.com">[Email]</a> or contact me on <a href="https://www.linkedin.com/in/tomijerenko/" target="_blank">[LinkedIn]</a>.</p>
-                    <p>Check out my <a href="https://github.com/tomijerenko/" target="_blank">[GitHub]</a> profile. You're welcome to pull, fork, modify, or criticize my code.</p>
+		    <p>For all business-related inquiries and other important matters, please feel free to contact me via <a href="mailto:jerenkotomi@gmail.com">[Email]</a> or <a href="https://www.linkedin.com/in/tomijerenko/" target="_blank">[LinkedIn]</a> by sending me a message.</p>
                 </section>
             </div>
         </div>
