--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <section>
                     <p>As a <strong itemprop="jobTitle">Cyber Security Specialist</strong>, I specialize in engineering, auditing and hardening of Digital Asset and Decentralized Finance platforms and solutions.</p>
                 </section>
-                <h2>Current Work</h2>
+                <h2>Current Occupation</h2>
                 <section>
                     <p>I am currently employed at <a href="https://www.qredo.com/" itemprop="worksFor">[Qredo]</a> and responsible for implementing and enforcing DevSecOps practices for a decentralized institutional cross-chain digital asset management solution.</p>
                 </section>
