--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="language" content="en">
         <meta name="author" content="Tomi Jerenko">
 	<meta name="keywords" content="tomi jerenko, cyber security, cloud security, devsecops, cryptography, blockchain, cryptocurrencies, digital assets, decentralized finance, defi">
-        <meta name="description" content="Tomi Jerenko - cyber security specialist in engineering, auditing and hardening of digital asset and DeFi platforms.">
+        <meta name="description" content="Tomi Jerenko - Cyber Security Specialist in engineering, auditing and hardening of Digital Asset and Decentralized Finance platforms and solutions.">
         <link rel="stylesheet" href="style.css">
         <link rel="icon" type="image/png" href="images/favicon-16x16.png" sizes="16x16" />
         <link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32" />
