--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="info-container">
                 <h1><strong itemprop="name">Tomi Jerenko</strong> - Cyber Security Specialist</h1>
                 <section>
-                    <p>As a <strong itemprop="jobTitle">Cyber Security Specialist</strong>, I specialize in engineering, auditing and hardening of Digital Asset and Decentralized Finance platforms and solutions.</p>
+		    <p>As a <strong itemprop="jobTitle">Cyber Security Specialist</strong>, I specialize in engineering, auditing and hardening of Digital Asset and Decentralized Finance platforms and solutions.</p>
                 </section>
                 <h2>Current Occupation</h2>
                 <section>
@@ -43,7 +43,7 @@
                 </section>
                 <h2>Problem Solver with Broad Expertise</h2>
                 <section>
-                    <p>With extensive academic knowledge and a broad familiarity across various topics, tools, and technologies, I am highly adept at solving complex problems with specialized yet simple solutions.<p>
+		    <p>With a deep understanding of Cloud Security, DevSecOps, Cryptography, Blockchain, Cryptocurrencies, Digital Assets, and Decentralized Finance (DeFi), I am highly adept to help clients navigate the complex landscape of cybersecurity threats and challenges. I am always open to discussing these topics and more, and welcome the opportunity to collaborate with others in the industry to drive innovation and progress.</p>
                 </section>
                 <h2>Personal Interests and Hobbies</h2>
                 <section>
