rm sections, refactor css

--- a/index.html
+++ b/index.html
@@ -33,26 +33,18 @@
                 </div>
             </div>
             <div class="info-container">
-                <h1><strong itemprop="name">Tomi Jerenko</strong> - Cyber Security Specialist</h1>
-                <section>
+		<article>
+		    <h1><strong itemprop="name">Tomi Jerenko</strong> - Cyber Security Specialist</h1>
 		    <p>As a <strong itemprop="jobTitle">Cyber Security Specialist</strong>, I specialize in engineering, auditing and hardening of Digital Asset and Decentralized Finance platforms and solutions.</p>
-                </section>
-                <h2>Current Occupation</h2>
-                <section>
-                    <p>I am currently employed at <a href="https://www.qredo.com/" itemprop="worksFor">[Qredo]</a> and responsible for implementing and enforcing DevSecOps practices for a decentralized institutional cross-chain digital asset management solution.</p>
-                </section>
-                <h2>Problem Solver with Broad Expertise</h2>
-                <section>
-		    <p>With a deep understanding of Cloud Security, DevSecOps, Cryptography, Blockchain, Cryptocurrencies, Digital Assets, and Decentralized Finance (DeFi), I am highly adept to help clients navigate the complex landscape of cybersecurity threats and challenges. I am always open to discussing these topics and more, and welcome the opportunity to collaborate with others in the industry to drive innovation and progress.</p>
-                </section>
-                <h2>Personal Interests and Hobbies</h2>
-                <section>
-		    <p>In addition to my passion for technology, I am also deeply interested in psychology, philosophy, languages, singing, and adrenaline sports such as motorcycle riding and climbing.</p>
-                <section>
-                <h2>Contact</h2>
-                <section>
-		    <p>For all business-related inquiries and other important matters, please feel free to contact me via <a href="mailto:jerenkotomi@gmail.com">[Email]</a> or <a href="https://www.linkedin.com/in/tomijerenko/" target="_blank">[LinkedIn]</a> by sending me a message.</p>
-                </section>
+		</article>
+		<h2>Current Occupation</h2>
+		<p>I am currently employed at <a href="https://www.qredo.com/" itemprop="worksFor">[Qredo]</a> and responsible for implementing and enforcing DevSecOps practices for a decentralized institutional cross-chain digital asset management solution.</p>
+		<h2>Problem Solver with Broad Expertise</h2>
+		<p>With a deep understanding of Cloud Security, DevSecOps, Cryptography, Blockchain, Cryptocurrencies, Digital Assets, and Decentralized Finance (DeFi), I am highly adept to help clients navigate the complex landscape of cybersecurity threats and challenges. I am always open to discussing these topics and more, and welcome the opportunity to collaborate with others in the industry to drive innovation and progress.</p>
+		<h2>Personal Interests and Hobbies</h2>
+		<p>In addition to my passion for technology, I am also deeply interested in psychology, philosophy, languages, singing, and adrenaline sports such as motorcycle riding and climbing.</p>
+		<h2>Contact</h2>
+		<p>For all business-related inquiries and other important matters, please feel free to contact me via <a href="mailto:jerenkotomi@gmail.com">[Email]</a> or <a href="https://www.linkedin.com/in/tomijerenko/" target="_blank">[LinkedIn]</a> by sending me a message.</p>
             </div>
         </div>
     </body>
