--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		<h2>Current Occupation</h2>
 		<p>I am currently employed at <a href="https://www.qredo.com/" itemprop="worksFor">[Qredo]</a> and responsible for implementing and enforcing DevSecOps practices for a decentralized institutional cross-chain digital asset management solution.</p>
 		<h2>Problem Solver with Broad Expertise</h2>
-		<p>With a deep understanding of Cloud Security, DevSecOps, Cryptography, Blockchain, Cryptocurrencies, Digital Assets, and Decentralized Finance (DeFi), I am highly adept to help clients navigate the complex landscape of cybersecurity threats and challenges. I am always open to discussing these topics and more, and welcome the opportunity to collaborate with others in the industry to drive innovation and progress.</p>
+		<p>With a deep understanding of Cloud Security, DevSecOps, Cryptography, Blockchain, Cryptocurrencies, Digital Assets, and Decentralized Finance (DeFi), I am highly adept at helping clients navigate the complex landscape of cybersecurity threats and challenges. I am always open to discussing these topics and more, and welcome the opportunity to collaborate with others in the industry to drive innovation and progress.</p>
 		<h2>Personal Interests and Hobbies</h2>
 		<p>In addition to my passion for technology, I am also deeply interested in psychology, philosophy, languages, singing, and adrenaline sports such as motorcycle riding and climbing.</p>
 		<h2>Contact</h2>
