--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	        <h1><strong itemprop="name">Tomi Jerenko</strong> - Cyber Security Specialist</h1>
 	        <p>As a <strong itemprop="jobTitle">Cyber Security Specialist</strong>, I specialize in engineering, auditing and hardening of Digital Asset and Decentralized Finance platforms and solutions.</p>
 		<h2>Current Occupation</h2>
-		<p>I am currently employed at <a href="https://www.qredo.com/" itemprop="worksFor">[Qredo]</a> and responsible for implementing and enforcing DevSecOps practices for a decentralized institutional cross-chain digital asset management solution.</p>
+		<p>I am currently employed at <a href="https://www.qredo.com/" itemprop="worksFor">[Qredo]</a> and responsible for implementing and enforcing DevSecOps practices for a decentralized, institutional cross-chain digital asset management solution.</p>
 		<h2>Problem Solver with Broad Expertise</h2>
 		<p>With a deep understanding of Cloud Security, DevSecOps, Cryptography, Blockchain, Cryptocurrencies, Digital Assets, and Decentralized Finance (DeFi), I am highly adept at helping clients navigate the complex landscape of cybersecurity threats and challenges. I am always open to discussing these topics and more, and welcome the opportunity to collaborate with others in the industry to drive innovation and progress.</p>
 		<h2>Personal Interests and Hobbies</h2>
